# SlashDiablo-Maphack

./: .gitignore  BH.sln  CMakeLists.txt
.github/workflows/: build-branch.yaml  pull-request.yaml
BH/: AsyncDrawBuffer.cpp  AsyncDrawBuffer.h  BH.cpp  BH.h  BH.vcxproj  BH.vcxproj.filters  BitReader.cpp  BitReader.h  CMakeLists.txt  Common.cpp  Common.h  CommonStructs.h  Config.cpp  Config.h  Config2.cpp  Config2.h  D2DataTables.h  D2Handlers.cpp  D2Handlers.h  D2Helpers.cpp  D2Helpers.h  D2Intercepts.cpp  D2Intercepts.h  D2Ptrs.cpp  D2Ptrs.h  D2Strings.h  D2Structs.h  D2Stubs.cpp  D2Stubs.h  D2Version.cpp  D2Version.h  DllMain.cpp  MPQInit.cpp  MPQInit.h  MPQReader.cpp  MPQReader.h  Patch.cpp  Patch.h  RuleLookupCache.h  TableReader.cpp  (+3 more)
BH.Injector/: PEStructs.cpp
BH/Common/: Input.cpp  Input.h  README.md  StringUtil.h  StringUtilStaticTests.inc  StringUtilTemplate.inc  WideEncoding.cpp  WideEncoding.h
BH/Config/: ConfigEntries.h  ConfigStruct.h  ConfigTypes.h
BH/D2Helper/: PrintToChat.cpp  PrintToChat.h  README.md
BH/Drawing/: Hook.cpp  Hook.h
BH/Drawing/Advanced/Checkhook/: Checkhook.cpp  Checkhook.h
BH/Drawing/Advanced/Colorhook/: Colorhook.cpp  Colorhook.h
BH/Drawing/Advanced/Combohook/: Combohook.cpp  Combohook.h
BH/Drawing/Advanced/Inputhook/: Inputhook.cpp  Inputhook.h
BH/Drawing/Advanced/Keyhook/: Keyhook.cpp  Keyhook.h
BH/Drawing/Basic/Boxhook/: Boxhook.cpp  Boxhook.h
BH/Drawing/Basic/Crosshook/: Crosshook.cpp
BH/Drawing/Basic/Framehook/: Framehook.cpp  Framehook.h
BH/Drawing/Basic/Linehook/: Linehook.cpp  Linehook.h
BH/Drawing/Basic/Texthook/: Texthook.cpp  Texthook.h
BH/Drawing/Stats/: StatsDisplay.cpp  StatsDisplay.h
BH/Drawing/UI/: UI.cpp  UI.h  UITab.cpp  UITab.h
BH/Modules/: Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h
BH/Modules/AutoTele/: AutoTele.cpp  AutoTele.h
BH/Modules/AutoTele/ATIncludes/: CollisionMap.h  Matrix.h  TeleportPath.h
BH/Modules/Bnet/: Bnet.cpp  Bnet.h
BH/Modules/ChatColor/: ChatColor.cpp  ChatColor.h
BH/Modules/Gamefilter/: Gamefilter.cpp  Gamefilter.h
BH/Modules/Item/: Item.cpp  Item.h  ItemDisplay.cpp  ItemDisplay.h
BH/Modules/Item/ItemDisplay/: Action.cpp  Action.h  ColorConstants.h  Condition.cpp  Condition.h  ConditionType.h  GemRune.cpp  GemRune.h  ItemHelper.cpp  ItemHelper.h  ItemInfo.h  ItemProperty.h  LookupCache.cpp  LookupCache.h  Rule.cpp  Rule.h  UnitItemInfo.h
BH/Modules/ItemMover/: ItemMover.cpp  ItemMover.h
BH/Modules/Maphack/: Maphack.cpp  Maphack.h
BH/Modules/Party/: Party.cpp  Party.h
BH/Modules/ScreenInfo/: ScreenInfo.cpp  ScreenInfo.h
BH/Modules/StashExport/: StashExport.cpp  StashExport.h
BH/internal/: pch.cpp  pch.h  pch.hpp
src/: CMakeLists.txt  README.md
src/bh/: CMakeLists.txt
src/bh/common/: CMakeLists.txt  README.md  input.cpp  input.hpp  string_util.hpp  string_util_static_tests.inc  string_util_template.inc
src/bh/common/data_struct/: CMakeLists.txt  red_black_tree.c  red_black_tree.h
src/bh/common/data_struct/red_black_tree/: CMakeLists.txt  red_black_color.c  red_black_color.h  red_black_node.c  red_black_node.h
src/bh/common/input/: CMakeLists.txt  virtual_key.c  virtual_key.h
src/bh/common/input/internal/: CMakeLists.txt  virtual_key_symbol_name_table.c  virtual_key_symbol_name_table.h
src/bh/common/logging/: CMakeLists.txt  level.hpp  log_record.cpp  log_record.hpp  logger.cpp  logger.hpp
src/bh/common/preprocessor/: CMakeLists.txt  concat.h
src/bh/common/preprocessor/template/: CMakeLists.txt  identifier.h  typedef.h
src/bh/common/string_util/: CMakeLists.txt  ascii.c  ascii.h  ascii.hpp  ascii_tests.cpp  bool.c  bool.h  bool.hpp  bool_tests.cpp  integer.c  integer.h  integer.hpp  integer_tests.cpp  memstring.c  memstring.h  trim.hpp  trim_tests.cpp  wide.hpp
src/bh/common/string_util/internal/: CMakeLists.txt
src/bh/common/windows/: CMakeLists.txt  handle_closer.cpp  handle_closer.hpp
src/bh/config/: CMakeLists.txt  config.hpp
src/bh/config/colonini/: CMakeLists.txt  README.md  colonini.h  type.h
src/bh/config/colonini/internal/: CMakeLists.txt  file_reader.c  file_reader.h  lexer.c  lexer.h  parser.c  parser.h  semantic_analyzer.c  semantic_analyzer.h
src/bh/config/colonini/type/: CMakeLists.txt  data.c  data.h  data_type.c  data_type.h  entry.c  entry.h  key.h  list.h  map.c  map.h  string.c  string.h  toggle.c  toggle.h  value.c  value.h  value_type.c  value_type.h
src/bh/d2/: CMakeLists.txt  README.md
src/bh/d2/d2client/: CMakeLists.txt
src/bh/d2/d2client/function/: CMakeLists.txt
src/bh/d2/d2lang/: CMakeLists.txt
src/bh/d2/d2lang/function/: CMakeLists.txt  get_locale_text.cpp  get_locale_text.hpp
src/bh/d2/d2win/function/: CMakeLists.txt  load_mpq.cpp  load_mpq.hpp
src/bh/d2/dll/: CMakeLists.txt  address.cpp  address.hpp  dll.hpp  handle.cpp  handle.hpp  name.cpp  name.hpp  path.cpp  path.hpp
src/bh/d2/dll/internal/: CMakeLists.txt  relative_path.cpp  relative_path.hpp
src/bh/d2/exe/: CMakeLists.txt  path.cpp  path.hpp  version.cpp  version.hpp
src/bh/d2/game/: CMakeLists.txt
src/bh/d2/game/exe/: path.cpp  (+4 more)
src/bh/d2/struct/: CMakeLists.txt  mpq_handle.hpp
src/bh/global/: CMakeLists.txt  file_logger.cpp  file_logger.hpp
src/bh/internal/: CMakeLists.txt
src/bh/internal/precompile_header/: CMakeLists.txt  pch.cpp  pch.h  pch.hpp
tests/: CMakeLists.txt
tests/bh/: CMakeLists.txt
tests/bh/common/: CMakeLists.txt
tests/bh/common/data_struct/: CMakeLists.txt  red_black_tree_test.c
tests/bh/common/input/: CMakeLists.txt  virtual_key_test.c
tests/bh/common/string_util/: CMakeLists.txt  ascii_test.c  bool_test.c  integer_test.c  memstring_test.c
tests/bh/config/: CMakeLists.txt
tests/bh/config/colonini/: CMakeLists.txt
tests/bh/config/colonini/internal/: CMakeLists.txt  file_reader_test.c  lexer_test.c  parser_test.c  semantic_analyzer_test.c  test_helper.c  test_helper.h
tests/bh/config/colonini/internal/data/: two_line.cfg  two_line_newline.cfg
tests/bh/config/colonini/type/: CMakeLists.txt  data_test.c  map_test.c  string_test.c  toggle_test.c  value_test.c
(+315 files in other folders)
